--- a/classification_and_results_for_all_models.ipynb
+++ b/classification_and_results_for_all_models.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This notebook shows an example of how to classify new folders of pdfs with both the keyword and svm model.\n",
     "\n",
-    "It also shows how to classify the existing dataset (2016 and poster) using both techniques."
+    "It also shows how to classify the existing dataset (dataset 1 and dataset 2) using both techniques."
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Poster dataset"
+    "## Secondary dataset"
    ]
   },
   {
@@ -143,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "df_poster_path = 'data/data_preprocessed/clean_poster_data.p'"
+    "df2_path = 'data/data_preprocessed/clean_dataset2.p'"
    ]
   },
   {
@@ -184,7 +184,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0000.pdf</td>\n",
-       "      <td>data/poster_data/</td>\n",
+       "      <td>data/dataset2/</td>\n",
        "      <td>\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nExample lab report\\n\\netc.</td>\n",
        "      <td>1</td>\n",
        "      <td>example_lab</td>\n",
@@ -196,7 +196,7 @@
       ],
       "text/plain": [
        "   filename             folder  \\\n",
-       "0  0000.pdf  data/poster_data/   \n",
+       "0  0000.pdf  data/dataset2/   \n",
        "\n",
        "                                               text  y         labo  \\\n",
        "0  \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nExample lab report\\n\\netc.  1  example_lab   \n",
@@ -211,8 +211,8 @@
     }
    ],
    "source": [
-    "df_poster = load_pickle(df_poster_path)\n",
-    "df_poster.head(1)"
+    "df2 = load_pickle(df2_path)\n",
+    "df2.head(1)"
    ]
   },
   {
@@ -265,9 +265,9 @@
    "source": [
     "kw_model = KeywordModel(keyword_filename='data/keywords/terms_2016-2017.txt')\n",
     "kw_preprocessing = KeywordPreprocessing()\n",
-    "df_poster['y_pred'] = kw_model.predict(kw_preprocessing.transform(df_poster.text.values))\n",
-    "print_metrics(df_poster.y.values, df_poster.y_pred.values)\n",
-    "plot_confusion_matrix(df_poster.y.values, df_poster.y_pred.values)"
+    "df2['y_pred'] = kw_model.predict(kw_preprocessing.transform(df2.text.values))\n",
+    "print_metrics(df2.y.values, df2.y_pred.values)\n",
+    "plot_confusion_matrix(df2.y.values, df2.y_pred.values)"
    ]
   },
   {
@@ -326,16 +326,16 @@
    ],
    "source": [
     "svm_model = load_pickle(svm_trained_model_path)\n",
-    "df_poster['y_pred'] = svm_model.predict(df_poster.clean_text.values)\n",
-    "print_metrics(df_poster.y.values, df_poster.y_pred.values)\n",
-    "plot_confusion_matrix(df_poster.y.values, df_poster.y_pred.values)"
+    "df2['y_pred'] = svm_model.predict(df2.clean_text.values)\n",
+    "print_metrics(df2.y.values, df2.y_pred.values)\n",
+    "plot_confusion_matrix(df2.y.values, df2.y_pred.values)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2016 dataset"
+    "## Primary dataset"
    ]
   },
   {
@@ -349,8 +349,8 @@
    },
    "outputs": [],
    "source": [
-    "df_2016_path = 'data/data_preprocessed/clean_2016_data.p'\n",
-    "df_2016 = load_pickle(df_2016_path)"
+    "df1_path = 'data/data_preprocessed/clean_dataset1.p'\n",
+    "df1 = load_pickle(df1_path)"
    ]
   },
   {
@@ -403,9 +403,9 @@
    "source": [
     "kw_model = KeywordModel(keyword_filename='data/keywords/terms_2016-2017.txt')\n",
     "kw_preprocessing = KeywordPreprocessing()\n",
-    "df_2016['y_pred'] = kw_model.predict(kw_preprocessing.transform(df_2016.text.values))\n",
-    "print_metrics(df_2016.y.values, df_2016.y_pred.values)\n",
-    "plot_confusion_matrix(df_2016.y.values, df_2016.y_pred.values)"
+    "df1['y_pred'] = kw_model.predict(kw_preprocessing.transform(df1.text.values))\n",
+    "print_metrics(df1.y.values, df1.y_pred.values)\n",
+    "plot_confusion_matrix(df1.y.values, df1.y_pred.values)"
    ]
   },
   {
@@ -464,9 +464,9 @@
    ],
    "source": [
     "svm_model = load_pickle(svm_trained_model_path)\n",
-    "df_2016['y_pred'] = svm_model.predict(df_2016.clean_text.values)\n",
-    "print_metrics(df_2016.y.values, df_2016.y_pred.values)\n",
-    "plot_confusion_matrix(df_2016.y.values, df_2016.y_pred.values)"
+    "df1['y_pred'] = svm_model.predict(df1.clean_text.values)\n",
+    "print_metrics(df1.y.values, df1.y_pred.values)\n",
+    "plot_confusion_matrix(df1.y.values, df1.y_pred.values)"
    ]
   }
  ],
