--- a/train_svm_classifier.ipynb
+++ b/train_svm_classifier.ipynb
@@ -55,8 +55,8 @@
    },
    "outputs": [],
    "source": [
-    "df_2016_path = 'data/data_preprocessed/clean_2016_data.p'\n",
-    "df_poster_path = 'data/data_preprocessed/clean_poster_data.p'\n",
+    "df1_path = 'data/data_preprocessed/clean_dataset1.p'\n",
+    "df2_path = 'data/data_preprocessed/clean_dataset2.p'\n",
     "\n",
     "output_model_path = 'data/models/trained_svm_model.p'"
    ]
@@ -112,7 +112,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0000.pdf</td>\n",
-       "      <td>data/poster_data/</td>\n",
+       "      <td>data/dataset2/</td>\n",
        "      <td>\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nExample lab report\\n\\netc.</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
@@ -123,7 +123,7 @@
       ],
       "text/plain": [
        "   filename             folder  \\\n",
-       "0  0000.pdf  data/poster_data/   \n",
+       "0  0000.pdf  data/dataset2/   \n",
        "\n",
        "                                               text  y  lab  \n",
        "0  \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nExample lab report\\n\\netc.  1  NaN  "
@@ -135,9 +135,9 @@
     }
    ],
    "source": [
-    "df_2016 = load_pickle(df_2016_path)\n",
-    "print(df_2016.shape)\n",
-    "df_2016.head(1)"
+    "df1 = load_pickle(df1_path)\n",
+    "print(df1.shape)\n",
+    "df1.head(1)"
    ]
   },
   {
@@ -184,7 +184,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0000.pdf</td>\n",
-       "      <td>data/poster_data/</td>\n",
+       "      <td>data/dataset2/</td>\n",
        "      <td>\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nExample lab report\\n\\netc.</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
@@ -195,7 +195,7 @@
       ],
       "text/plain": [
        "   filename             folder  \\\n",
-       "0  0000.pdf  data/poster_data/   \n",
+       "0  0000.pdf  data/dataset2/   \n",
        "\n",
        "                                               text  y  lab  \n",
        "0  \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nExample lab report\\n\\netc.  1  NaN  "
@@ -207,9 +207,9 @@
     }
    ],
    "source": [
-    "df_poster = load_pickle(df_poster_path)\n",
-    "print(df_poster.shape)\n",
-    "df_poster.head(1)"
+    "df2 = load_pickle(df2_path)\n",
+    "print(df2.shape)\n",
+    "df2.head(1)"
    ]
   },
   {
@@ -233,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---- Metrics for 2016 data: ----\n",
+      "---- Metrics for df1 data: ----\n",
       "\n",
       "Predicted positive: 3849\n",
       "Predicted negative: 2242\n",
@@ -261,7 +261,7 @@
       "**********************************************************************\n",
       "\n",
       "\n",
-      "----- Metrics for poster data: ----\n",
+      "----- Metrics for df2 data: ----\n",
       "\n",
       "Predicted positive: 281\n",
       "Predicted negative: 295\n",
@@ -290,7 +290,7 @@
    ],
    "source": [
     "model = SvmModel(pred_split_position=-0.724)\n",
-    "model.train_and_test_on_2016_and_poster_data(df_2016, df_poster)"
+    "model.train_and_test_on_2_datasets(df1, df2)"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "outputs": [],
    "source": [
     "model = SvmModel(pred_split_position=-0.724)\n",
-    "model.fit_on_2016_and_poster_data(df_2016, df_poster)\n",
+    "model.fit_on_2_datasets(df1, df2)\n",
     "model.save_model(output_model_path)"
    ]
   }
@@ -334,6 +334,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   },
   "toc": {
    "base_numbering": 1,
